RESOLVED FIXED165563
DumpRenderTree should stop using CheckedMalloc.
https://bugs.webkit.org/show_bug.cgi?id=165563
Summary DumpRenderTree should stop using CheckedMalloc.
Mark Lam
Reported 2016-12-07 16:21:32 PST
1. WebKitTestRunner does not have equivalent behavior to that which is implemented in CheckedMalloc. 2. bmalloc does not honor the settings of CheckedMalloc. The only time CheckedMalloc comes into play is when DRT uses gmalloc or system malloc. As a result, DRT exhibits different behavior from the normal way we run our tests. We should obsolete CheckedMalloc and make DRT behave consistently with WKTR.
Attachments
proposed patch. (12.57 KB, patch)
2016-12-07 16:32 PST, Mark Lam
no flags
Mark Lam
Comment 1 2016-12-07 16:22:19 PST
Mark Lam
Comment 2 2016-12-07 16:32:43 PST
Created attachment 296436 [details] proposed patch.
Geoffrey Garen
Comment 3 2016-12-07 16:42:59 PST
Comment on attachment 296436 [details] proposed patch. r=me
Alexey Proskuryakov
Comment 4 2016-12-07 18:17:35 PST
For reference, this code was added in bug 7655 to silence noise in the logs. We eitehr no longer have such tests, or don't care about the noise as much as before.
WebKit Commit Bot
Comment 5 2016-12-07 19:26:38 PST
Comment on attachment 296436 [details] proposed patch. Clearing flags on attachment: 296436 Committed r209516: <http://trac.webkit.org/changeset/209516>
WebKit Commit Bot
Comment 6 2016-12-07 19:26:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.